tests/ui/index-unsupported.stderr
error: Unsupported index type: blah
 --> tests/./ui/index-unsupported.rs:5:27
  |
5 |     #[cipherstash(query = "blah")]
  |                           ^^^^^^
